--- a/YouTubeDeepDarkMaterial.css
+++ b/YouTubeDeepDarkMaterial.css
@@ -3,6 +3,7 @@
 @-moz-document domain("youtube.com") {
  	
 /*For the new Material Design for YouTube*/
+/*Theme made by RaitaroH @https://github.com/RaitaroH/YouTube-DeepDark*/
 
 /*1.4.5*/
 
