--- a/YouTubeDeepDarkMaterial.css
+++ b/YouTubeDeepDarkMaterial.css
@@ -61,8 +61,8 @@
 		/*Firefox Dark colors*/
 		/*
 		--main-color: #5675B9;
-		--main-background: #181D20;
-		--second-background: #272B35;
+		--main-background: #272B35;
+		--second-background: #181D20;
 		--hover-background: #353A44;
 		--main-text: #E3EEF9;
 		--dimer-text: #606376;
