--- a/YouTubeDeepDarkMaterial.css
+++ b/YouTubeDeepDarkMaterial.css
@@ -5,7 +5,7 @@
 /*For the new Material Design for YouTube*/
 /*Theme made by RaitaroH @https://github.com/RaitaroH/YouTube-DeepDark*/
 
-/*1.4.9*/
+/*1.5.0*/
 
 	/*Main color variables*/
 	:root
@@ -450,6 +450,19 @@
 	ytd-searchbox[mode=legacy][has-focus] #container.ytd-searchbox
 	{
 		border-color: var(--main-color) !important;
+	}
+	.sbsb_a,.sbdd_b
+	{
+		background: var(--second-background) !important;
+		border: none !important;
+	}
+	.gsfs
+	{
+		color: var(--dimer-text) !important;
+	}
+	.sbsb_c.gsfs:hover
+	{
+		background-color: var(--hover-background) !important;
 	}
 
 	/*Search for channel videos*/
