--- a/YouTubeDeepDarkMaterial.css
+++ b/YouTubeDeepDarkMaterial.css
@@ -5,7 +5,7 @@
 /*For the new Material Design for YouTube*/
 /*Theme made by RaitaroH @https://github.com/RaitaroH/YouTube-DeepDark*/
 
-/*1.5.3*/
+/*1.5.4*/
 
 	/*Main color variables*/
 	:root
@@ -575,6 +575,13 @@
 	ytd-notification-renderer.unseen #new.ytd-notification-renderer
 	{
 		background-color: var(--main-color) !important;
+	}
+	
+	/*Confirmantion popup*/
+	paper-toast 
+	{
+		background-color: var(--hover-background) !important;
+		color: var(--main-text) !important;
 	}
 
 	/*Cards*/
