--- a/YouTubeDeepDarkMaterial.css
+++ b/YouTubeDeepDarkMaterial.css
@@ -5,7 +5,7 @@
 /*For the new Material Design for YouTube*/
 /*Theme made by RaitaroH @https://github.com/RaitaroH/YouTube-DeepDark*/
 
-/*1.5.6*/
+/*1.5.7*/
 
 	/*Main color variables*/
 	:root
@@ -398,6 +398,12 @@
 	.ytp-keyboard-focus .ytp-progress-bar:focus
 	{
 		box-shadow: none !important;
+	}
+	
+	/*Popup for when you hover over the channel avatar in the video*/
+	.iv-branding .branding-context-container-inner
+	{
+		background-color: var(--main-background) !important;
 	}
 	
   	/*Changing icon for unavailable video*/
